chore: prepare for open source release v1.0.0
- Add GPL-3.0 LICENSE
- Add .env.example template for contributors
- Add CONTRIBUTING.md with development guide
- Add CHANGELOG.md tracking version history
- Add CODE_OF_CONDUCT.md (Contributor Covenant v2.1)
- Add GitHub Actions workflows (CI, Release, Stale)
- Add GitHub issue and PR templates
- Update package.json with full metadata and npm scripts
- Update README.md with badges, npm install instructions, and links
- Remove 'private' flag to enable npm publishing

TTyper is now ready for open source release! 🚀

--- a/package.json
+++ b/package.json
@@ -1,10 +1,47 @@
 {
-  "name": "t-typer",
+  "name": "ttyper",
+  "version": "1.0.0",
+  "description": "A terminal-based TypeRacer game with multiplayer support",
   "module": "src/index.tsx",
   "type": "module",
-  "private": true,
+  "author": "divquan <divquan@gmail.com>",
+  "license": "GPL-3.0",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/divquan/ttyper.git"
+  },
+  "bugs": {
+    "url": "https://github.com/divquan/ttyper/issues"
+  },
+  "homepage": "https://github.com/divquan/ttyper#readme",
+  "keywords": [
+    "terminal",
+    "typing",
+    "game",
+    "typeracer",
+    "cli",
+    "multiplayer",
+    "tui",
+    "typing-test",
+    "speed-typing"
+  ],
+  "engines": {
+    "bun": ">=1.0.0"
+  },
+  "bin": {
+    "ttyper": "dist/index.js"
+  },
+  "files": [
+    "dist/",
+    "LICENSE",
+    "README.md"
+  ],
   "scripts": {
-    "dev": "bun run --watch src/index.tsx"
+    "dev": "bun run --watch src/index.tsx",
+    "build": "bun build src/index.tsx --outdir ./dist --target bun",
+    "compile": "bun build --compile src/index.tsx --outfile ttyper",
+    "typecheck": "tsc --noEmit",
+    "prepublishOnly": "bun run build"
   },
   "devDependencies": {
     "@types/bun": "latest"
